[package]
name = "fintools"
version = "0.1.0"
authors = ["FindoraNetwork"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "fns"
path = "src/bins/fns.rs"

[[bin]]
name = "stt"
path = "src/bins/stt.rs"

[[bin]]
name = "key_generator"
path = "src/bins/key_generator.rs"

[[bin]]
name = "staking_cfg_generator"
path = "src/bins/cfg_generator.rs"

[[bin]]
name = "xx"
path = "src/bins/xx.rs"

[dependencies]
wallet = { path = "../wallet" }
ledger = { path = "../../ledger" }
utils = { path = "../../libs/utils" }
txn_builder = { path = "../txn_builder" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.3a" }
tendermint = "0.19.0"

hex = "0.4.2"
base64 = "0.10"
clap = "2.33.3"
lazy_static = "1.4.0"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
attohttpc = { version = "0.16.3", default-features = false, features = ["compress", "json", "tls-rustls"] }
serde_json = "1.0.40"
serde = { version = "1.0.124", features = ["derive"] }

promptly = "0.3.0"

surf = { version = "2.2.0", default-features = false, features = ["h1-client-rustls"] }
rand = "0.8"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand_chacha = "0.2.0"
parking_lot = "0.11.1"
async-std = "1.9.0"

[build-dependencies]
vergen = "=3.1.0"

[features]
abci_mock = [ "ledger/abci_mock" ]
debug_env = [ "ledger/debug_env" ]
