[package]
name = "http_tester"
version = "0.1.0"
authors = ["Brian Rogoff <brian@findora.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air = { path = "../../libs/ads/air" }
clap = "2.33.0"
credentials = { path = "../../libs/credentials" }
cryptohash = { path = "../../libs/cryptohash" }
flexi_logger = "0.15.2"
ledger = { path = "../../ledger" }
log = "0.4.8"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
time = "0.2.15"
txn_builder = { path = "../txn_builder" }
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", branch = "fix-deps-v0.0.3-5" }
