[package]
name = "ledger_api_service"
version = "0.1.0"
authors = ["Nathan Yospe <nathan@eian.io>"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/ledger_api_service.rs"

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
actix-cors = "0.1.0"
actix-rt = "0.2"
actix-service = "0.4.2"
actix-web = "1.0.5"
cryptohash = { path = "../../libs/cryptohash" }
air = { path = "../../libs/ads/air" }
ledger = { path = "../../ledger" }
submission_server = {path = "../submission_server"}
percent-encoding = "2.1.0"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparse_merkle_tree = { path = "../../libs/ads/sparse_merkle_tree" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.0d" }
utils = { path = "../../libs/utils" }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

[build-dependencies]
vergen = "3.1.0"
