[package]
name = "ledger_app"
version = "0.1.0"
authors = ["Nathan Yospe <nathan@eian.io>"]
edition = "2018"

[lib]
path = "src/ledger_app.rs"

[dependencies]
ledger = { path = "../../ledger" }
api_service = { path = "../../components/api_service" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-web = "1.0"
