[package]
name = "ledger_app"
version = "0.1.0"
authors = ["Nathan Yospe <nathan@eian.io>"]
edition = "2018"

[lib]
path = "src/ledger_app.rs"

[dependencies]
actix-web = "1.0"
ledger = { path = "../../ledger" }
rand = "0.6"
rand_chacha = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
txn_builder = {path = "../txn_builder"}
zei = { git = "ssh://git@github.com/findoraorg/zei" }