[package]
name = "ledger_app"
version = "0.1.0"
authors = ["Nathan Yospe <nathan@eian.io>"]
edition = "2018"

[lib]
path = "src/ledger_app.rs"

[dependencies]
actix-web = "1.0"
ledger = { path = "../../ledger" }
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
txn_builder = {path = "../txn_builder"}
zei = { git = "ssh://git@github.com/findoraorg/zei" }
