[package]
name = "ledger_client"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "ledger_client"
path = "src/ledger_client.rs"

[dependencies]
arrayref = "0.3.5"
cryptohash = { path = "../../libs/cryptohash" }
ledger = { path = "../../ledger" }
percent-encoding = "2.1.0"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
utils = { path = "../../libs/utils" }
zei = { git = "ssh://git@github.com/findoraorg/zei", tag = "v0.0.3-3" }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

