[package]
name = "ledger_mirror"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "ledger_mirror"
path = "src/ledger_mirror.rs"

[dependencies]
arrayref = "0.3.5"
ledger = { path = "../../ledger" }
flexi_logger = "0.15.2"
zei = { git = "ssh://git@github.com/findoraorg/zei", tag = "v0.0.3-1" }
ledger_api_service = { path = "../ledger_api_service" }
ctrlc = "3.1.3"
actix-rt = "0.2"
log = "0.4.8"
percent-encoding = "2.1.0"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = "0.9.24"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

