[package]
name = "ledger_standalone"
version = "0.1.0"
authors = ["Engineering <engineering@findora.org>"]
edition = "2018"

[[bin]]
name = "ledger_standalone"
path = "src/ledger_standalone.rs"

[dependencies]
ruc = "0.5.1"
cryptohash = { path = "../../libs/cryptohash" }
flexi_logger = "0.15.2"
ledger_api_service = { path = "../ledger_api_service" }
ledger = { path = "../../ledger" }
log = "0.4.8"
rand_chacha = "0.2.0"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
subprocess = "0.1.18"
submission_api = { path = "../submission_api" }
submission_server = { path = "../submission_server" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.0" }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

